--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,28 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+  
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+
+table tr:last-child th:first-child {
+  border-top-left-radius: 10px;
+}
+  
+table tr:last-child th:last-child {
+  border-top-right-radius: 10px;
+}
+
+.tabs>li:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+  
+.tabs>li:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
